--- a/EME/EME.csproj
+++ b/EME/EME.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AWSSDK.Rekognition" Version="3.3.11.4" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.25" />
     <PackageReference Include="Google.Cloud.Language.V1" Version="1.2.0-beta01" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.8.9" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
